kubernetes/smokeping/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: smokeping

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
      - name: smokeping
        image: dvorak/docker-smokeping:latest@sha256:f458e95b8d4ae8499e6efff9bb891b937eff13bd65550cb59f5b7a246a0de352
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: smokeping-config
      - name: data
        persistentVolumeClaim:
          claimName: smokeping-data
