kubernetes/smokeping/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: smokeping
  annotations:
    ak-type: basic-auth
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Smokeping
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: smokeping.png

spec:
  tls:
  - hosts:
    - smokeping.k.oneill.net
    secretName: smokeping-tls
  rules:
  - host: smokeping.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smokeping
            port:
              number: 80
  ingressClassName: nginx
